--- a/package.json
+++ b/package.json
@@ -31,5 +31,17 @@
     "eslint-config-standard": "^17.0.0",
     "nuxt": "^3.3.2",
     "vitest": "^0.29.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/atimermann/nuxt-layer-adminlite-primeface.git"
+  },
+  "homepage": "https://github.com/atimermann/nuxt-layer-adminlite-primeface#readme",
+  "bugs": {
+    "url": "https://github.com/atimermann/nuxt-layer-adminlite-primeface/issues"
+  },
+  "files": [
+    "src",
+    "nuxt.config.ts"
+  ]
 }
