--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "ISC",
   "main": "./nuxt.config.ts",
   "scripts": {
-    "publish-patch": "npm version patch && npm publish --access public && git push",
-    "publish-minor": "npm version minor && npm publish --access public && git push",
-    "publish-major": "npm version major && npm publish --access public && git push",
+    "publish-patch": "npm version patch && npm publish && git push",
+    "publish-minor": "npm version minor && npm publish && git push",
+    "publish-major": "npm version major && npm publish && git push",
     "dev": "nuxi dev .playground",
     "build": "nuxt build .playground",
     "generate": "nuxt generate .playground",
