- Atualização documentação - Carrega fontes do google - index.mjs movido pra src - Configuração header da pagina, breadcrump, logo, titulo no menu - ativado recolhimento menu - Implementado tela de login não funcional, apenas demonstração - Corrigido links - Menu agora é carregado corretamente - Descoberto e documentado técnica de carregar assets corretamente pelo usuário no app.vue em vez do app.config (que não funciona) - Implementado layout Guest padrão

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "André Timermann",
   "license": "ISC",
   "main": "./nuxt.config.mjs",
-  "module": "index.mjs",
+  "module": "./src/index.mjs",
   "scripts": {
     "publish-patch": "npm version patch && npm publish && git push",
     "publish-minor": "npm version minor && npm publish && git push",
