--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "layer"
   ],
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@nuxt/kit": "^3.3.2",
     "lodash": "^4.17.21",
     "primeflex": "^3.3.0",
